--- a/Getting Started/01_First_Steps_OpenCV.ipynb
+++ b/Getting Started/01_First_Steps_OpenCV.ipynb
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "#Olüü"
    ]
   },
   {
